--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/image/LDFN5973.jpg" alt="vanilla picture"></td>
+      <td><img src="image/LDFN5973.jpg" alt="vanilla picture"></td>
       <td>
         <h1>Fatemeh Nouri</h1>
         <p>Student of Razi University.<br>Department of <em><strong>Computer Engineering</strong></em>.
